# bakpiaRun

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  index.php  wrapper.h
certs/: .gitkeep  cert.pem  key.pem
config/: bakpiarun.example.yaml  bakpiarun.yaml
examples/queue/: check_status.php  submit_job.php
legacy-embed/: main.rs
lib/: BakpiaQueue.php
public/: clickjacking-test.html  heavy-db.php  index.php  p0-selftest.php  products.php  script.js  slow.php  style.css  test.php  test_db_advanced.php  test_db_proxy.php  test_db_query.php  test_prepared_statements.php  upload.php  users.php
public/admin/: index.php
scripts/: smoke-test.sh
src/: main.rs
src-server/: .gitignore  Cargo.toml
src-server/src/: config.rs  handlers.rs  ipc.rs  logger.rs  main.rs  metrics.rs  pool_manager.rs  queue.rs  rate_limiter.rs  security.rs  static_file.rs  types.rs  worker.rs  worker_pool.rs
src-server/src/db_proxy/: mod.rs  mysql_protocol.rs
src-server/src/job_handlers/: email.rs  generic.rs  mod.rs  report.rs
src-server/src/middleware/: admin_auth.rs
src-worker/: worker.php
