[package]
name = "bakpiarun-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
urlencoding = "2.1"
multer = "3.0"
base64 = "0.22"
futures-util = "0.3"
tempfile = "3.10"
uuid = { version = "1.6", features = ["v4"] }